--- a/practice-projects/00-simple-web-server/views/layouts/main.handlebars
+++ b/practice-projects/00-simple-web-server/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Mensajes</title>
+	<title>{{title}}</title>
 </head>
 
 <body>
@@ -14,24 +14,7 @@
 		<a href="/contact">Contact</a>
 	</header>
 
-	<h1>Mensajes Recibidos</h1>
-
-	<table>
-		<thead>
-			<tr>
-				<th>Fecha</th>
-				<th>Nombre</th>
-				<th>Mensaje</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>16-08-09</td>
-				<td>pepe</td>
-				<td>hola</td>
-			</tr>
-		</tbody>
-	</table>
+	{{{body}}}
 
 	<footer>
 		Super app 202X
