--- a/practice-projects/00-simple-web-server/views/partials/userMessages.handlebars
+++ b/practice-projects/00-simple-web-server/views/partials/userMessages.handlebars
@@ -1,7 +1,7 @@
 {{#each messages}}
 <tr>
-	<td>{{this.date}}</td>
-	<td>{{this.from}}</td>
-	<td>{{this.message}}</td>
+	<td style="padding: 10px 20px;">{{this.date}}</td>
+	<td style="padding: 10px 20px;">{{this.from}}</td>
+	<td style="padding: 10px 20px;">{{this.message}}</td>
 </tr>
 {{/each}}
