--- a/practice-projects/00-simple-web-server/views/contact.handlebars
+++ b/practice-projects/00-simple-web-server/views/contact.handlebars
@@ -1,6 +1,8 @@
-<form action="post">
-	<label for="name">Name</label>
-	<input type="text" name="name" id="name" placeholder="Pepito, Jorge..." />
+<form method="post" action="/contact">
+	<label for="from">From</label>
+	<input type="text" name="from" id="from" placeholder="Pepito, Jorge..." />
+	<label for="to">To</label>
+	<input type="text" name="to" id="to" placeholder="Pepito, Jorge..." />
 	<label for="message">Mensaje</label>
 	<textarea name="message" id="message" cols="30" rows="10" placeholder="Hola como te va..."></textarea>
 	<button id="submit-btn">Enviar</button>
